--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "scripts": {
     "dev": "vite",
+    "prebuild": "npm install",
     "build": "vite build",
     "preview": "vite preview"
   },
